Fix text-align for better readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ a {
 
 p {
     font-size: 140%;
-    text-align: justify;
+    text-align: left;
 }
 
 .container {
